--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@mdi/font": "7.2.96",
+    "@tauri-apps/api": "^1.4.0",
     "vue": "^3.2.45",
-    "@tauri-apps/api": "^1.4.0"
+    "vuetify": "3.3.7"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.4.0",
     "@types/node": "^18.7.10",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-vue": "^9.15.1",
     "typescript": "^4.9.5",
     "vite": "^4.2.1",
-    "vue-tsc": "^1.0.11",
-    "@tauri-apps/cli": "^1.4.0"
+    "vite-plugin-vuetify": "1.0.2",
+    "vue-tsc": "^1.0.11"
   }
 }
