--- a/tauri-src/Cargo.toml
+++ b/tauri-src/Cargo.toml
@@ -16,18 +16,19 @@ tracing = { version = "0.1", features = ["log", "async-await"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-log = "0.1"
 tracing-appender = "0.2"
-bitfield = "0.14"
+modular-bitfield = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bincode = "1.3"
 sysfs_gpio = "0.6"
 chrono = "0.4"
-lazy_static = "1.4"
+lazy_static = "1.4.0"
 gloo = "0.8"
 js-sys = "0.3"
 yew = { version = "0.20.0", features = ["csr"] }
 wasm-bindgen = "0.2"
 tauri = { version = "1.4", features = ["shell-open"] }
+serde_with = "3.0.0"
 
 [build-dependencies]
 tauri-build = { version = "1.4", features = [] }
