--- a/tauri-src/Cargo.toml
+++ b/tauri-src/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 anyhow = "1"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["rt", "macros"] }
 tokio-socketcan = "0.3"
 futures-util = "0.3"
 tracing = { version = "0.1", features = ["log", "async-await"] }
@@ -18,16 +18,14 @@ tracing-log = "0.1"
 tracing-appender = "0.2"
 modular-bitfield = "0.11"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 bincode = "1.3"
-sysfs_gpio = "0.6"
 chrono = "0.4"
 lazy_static = "1.4.0"
-gloo = "0.8"
-js-sys = "0.3"
-yew = { version = "0.20.0", features = ["csr"] }
-wasm-bindgen = "0.2"
-tauri = { version = "1.4", features = ["shell-open"] }
+# gloo = "0.8"
+# js-sys = "0.3"
+# yew = { version = "0.20.0", features = ["csr"] }
+# wasm-bindgen = "0.2"
+tauri = { version = "1.4", features = [ "api-all"] }
 serde_with = "3.0.0"
 
 [build-dependencies]
