--- a/tauri-src/Cargo.toml
+++ b/tauri-src/Cargo.toml
@@ -6,6 +6,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+panic = "abort" # Strip expensive panic clean-up logic
+# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
+lto = true # Enables link to optimizations
+opt-level = "s" # Optimize for binary size
+strip = true # Remove debug symbols
+
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 anyhow = "1"
