--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdi/font": "7.2.96",
     "@tauri-apps/api": "^1.4.0",
+    "numerable": "^0.3.15",
     "vue": "^3.2.45",
     "vuetify": "3.3.7"
   },
