--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,35 +14,34 @@ opt-level = "s" # Optimize for binary size
 strip = true # Remove debug symbols
 
 [dependencies]
-clap = { version = "4", features = ["derive"] }
+# GENERAL
 anyhow = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+serde = { version = "1.0", features = ["derive"] }
+lazy_static = "1.4.0"
+
+# CLI
+clap = { version = "4", features = ["derive"] }
+
+# DATA
+modular-bitfield = "0.11"
+
+# CAN
+bincode = "1.3"
 tokio-socketcan = "0.3"
-tokio-tungstenite = "0.20"
-async-std = "1.12"
 futures-util = "0.3"
-futures = "0.3"
-flume = "0.10"
+
+# LOG
 tracing = { version = "0.1", features = ["log", "async-await"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-log = "0.1"
 tracing-appender = "0.2"
-tracing-actix-web = "0.7"
-modular-bitfield = "0.11"
-url = { version = "2.4", features = ["serde"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-serde_with = "3.1"
-bincode = "1.3"
 chrono = "0.4"
-lazy_static = "1.4.0"
 
-# Web Server
-paperclip = { version = "0.8", features = ["paperclip-actix", "actix4",  "swagger-ui", "url"] }
-include_dir = "0.7"
-actix-cors = "0.6"
-actix-files = "0.6"
-actix-web = "4.3"
-actix-web-validator = "5.0"
-actix-service = "2.0"
-actix-extensible-rate-limit = "0.2"
+# GUI
+imgui = "0.1.0"
+imgui-glfw-rs = "0.4"
+gl = "0.14.0"
+
+[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
+pre-build = ["dpkg --add-architecture armhf && apt-get update && apt-get install --assume-yes --no-install-recommends libsdl2-dev:armhf"]
