--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "numerable": "^0.3.15",
     "vue": "^3.3.4",
-    "vuetify": "^3.3.10"
+    "vuetify": "^3.3.10",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.2",
